# chromapitch

./: .gitignore  .gitmodules  CMakeLists.txt  Chroma Pitch.jucer  Notes.md  README.md
ChromaPitch/: Chroma Pitch.jucer  Notes.md  README.md
ChromaPitch/Source/: CMakeLists.txt  FrequencyEstimator.h  Header.cpp  PitchLine.cpp  PluginEditor.cpp  Variables.cpp  Variables.h
ChromaScope/Source/: CMakeLists.txt  Headers.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeProcessor.cpp  ScopeProcessor.h
Gravity/Source/: Astro.cpp  Astro.h  AudioContainer.cpp  AudioContainer.h  CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  Generator.cpp  Generator.h  Headers.h  LeftBar.cpp  LeftBar.h  Map.cpp  Map.h  MapButton.cpp  MapButton.h  Parameters.cpp  Parameters.h  Planet.cpp  Planet.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Sun.cpp  Sun.h  TopBar.cpp  TopBar.h  Variables.cpp  Variables.h
Source/: .PluginEditor.cpp.swp  .PluginEditor.h.swp  .YIN.cpp.swp  .YIN.h.swp  Averager.cpp  Averager.h  EKFPitch.cpp  EKFPitch.h  FrequencyEstimator.cpp  FrequencyEstimator.h  Header.cpp  Header.h  Headers.h  Line.cpp  Line.h  MPE.cpp  MPE.h  Midi.h  NoteBox.cpp  NoteBox.h  Oscillator.cpp  Oscillator.h  PitchLine.cpp  PitchLine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preprocess.cpp  Preprocess.h  Variables.cpp  Variables.h  View.cpp  View.h  YIN.cpp  YIN.h  ZeroCrossing.cpp  ZeroCrossing.h
Tests/: CMakeLists.txt  Main.cpp
Vectors/Source/: CMakeLists.txt  Globals.cpp  Globals.h  Headers.h  NodeComponent.cpp  NodeComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginScanner.cpp  PluginScanner.h  PluginScannerSubprocess.cpp  PluginScannerSubprocess.h  PluginWindow.cpp  PluginWindow.h  StateManager.cpp  StateManager.h
chromalib/include/Chroma/: ChromaHeader.h  Midi.h  Point.h  RingBuffer.h
src/: CMakeLists.txt  FrequencyEstimator.cpp  Headers.h  MPE.cpp  MPE.h  NoteBox.cpp  NoteBox.h  PitchLine.h  View.h  YIN.cpp  YIN.h  juce_build.cpp
